# mySortMaildir

./: .gitignore  Config.hs.example  MyParseMail.hs  MySortMaildir.hs  README.md  default.nix  mySortMaildir.cabal  mySortMaildir.hs.example  mySortMaildir.sh
src/: Common.hs  Config.hs.example  Main.hs  MyGetMails.hs  MyParseMail.hs  MySortMaildir.hs  mySortMaildir.hs.example
src/MySortMaildir/: Actions.hs  Colors.hs  Common.hs  GetMails.hs  Helpers.hs  ParseMail.hs
src/MySortMaildir/GetMails/: ParseMail.hs
