name:                mySortMaildir
version:             0.1.0.0
synopsis:            A small programm to sort maildirs
description:         A small programm to sort maildirs
license:             BSD3
license-file:        LICENSE
author:              Maximilian Huber
maintainer:          mail@maximilian-huber.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  src/mySortMaildir.hs.example
cabal-version:       >=1.10

library
  exposed-modules:     MySortMaildir
  other-modules:       MySortMaildir.Common
                     , MySortMaildir.GetMails
                     , MySortMaildir.GetMails.ParseMail
                     , MySortMaildir.Helpers
                     , MySortMaildir.Actions
  build-depends:       base >=4.7
                     , directory
                     , filepath
                     , fsnotify
                     , containers
                     , base64-string
                     , utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall
  ghc-prof-options:    -prof -auto-all
  other-extensions:    CPP

executable mySortMaildir
  main-is:             mySortMaildir.hs
  other-modules:       MySortMaildir
                     , MySortMaildir.Common
                     , MySortMaildir.GetMails
                     , MySortMaildir.GetMails.ParseMail
                     , MySortMaildir.Helpers
                     , MySortMaildir.Actions
  build-depends:       base >=4.7
                     , directory
                     , filepath
                     , fsnotify
                     , containers
                     , base64-string
                     , utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    CPP
